--- a/doc.html
+++ b/doc.html
@@ -55,7 +55,7 @@
         <div style="background: #f8f8f8; padding: 20px; border-radius: 8px; margin: 30px 0;">
             <p><strong>Instrucciones:</strong> Al hacer clic en el botón de abajo, se debería abrir automáticamente la app de Mercado Libre.</p>
             
-            <a href="melisearch://home" class="btn-deeplink">
+            <a href="meli://webview/?url=https%3A%2F%2Fwww.mercadolivre.com.br%2Fafiliados%2hub" class="btn-deeplink">
                 ABRIR EN LA APP
             </a>
         </div>
